Fix ipad alignment issues with cal widge

--- a/client/src/assets/styles/app-base.pcss
+++ b/client/src/assets/styles/app-base.pcss
@@ -6,5 +6,5 @@
  *
  */
 html {
-  font-size: 18px !important;
+  font-size: 17px !important;
 }
